--- a/pages/post/post.module.css
+++ b/pages/post/post.module.css
@@ -1,6 +1,8 @@
 .post h1 {
   font-size: 3rem;
   font-weight: 900;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
 }
 
 .post time {
@@ -17,7 +19,11 @@
 }
 
 .post a {
-  color: purple;
+  color: rgb(59, 175, 247);
+}
+.post p {
+  margin-bottom: 1rem;
+  padding: 0.1rem;
 }
 
 .post p ul {
@@ -35,4 +41,5 @@
 .post img {
   max-width: 100%;
   max-height: 400px;
+  margin: 0 auto 0;
 }
